--- a/HotelCompass/Base.lproj/Main.storyboard
+++ b/HotelCompass/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" id="OBO-g1-04g" customClass="CompassView">
+                                                <view userInteractionEnabled="NO" contentMode="scaleToFill" id="OBO-g1-04g" customClass="CompassView">
                                                     <rect key="frame" x="10" y="5" width="82" height="82"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
